# Concord

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql.yml
frontend/: .env.example  nuxt.config.ts
frontend/composables/: useTopics.ts
src/bert/: concord.py  model_manager.py  pre_process.py  topic_update.py
src/concord/server/: app_lifespan.py  main.py
src/concord/server/apis/: channels_api.py  channels_api_base.py  external_integration_api.py  external_integration_api_base.py  servers_api.py  servers_api_base.py  trending_api.py  trending_api_base.py
src/concord/server/models/: channel_messages_request.py  channel_messages_response.py  channel_related_response.py  channel_related_response_related_channels_inner.py  channel_topics_response.py  memory_photo.py  memory_request.py  (+11 more)
src/graph/: graph.py  schema.py
src/openapi_server/impl/: channels_api.py  external_integration_api.py  servers_api.py  trending_api.py
src/services/: __init__.py  container.py  graph_repository.py  server_service.py  topic_service.py
tests/: conftest.py  test_app_lifespan_fallbacks.py  test_bert_concord.py  test_bert_pre_process.py  test_bert_topic_update.py  test_channels_api.py  test_channels_api_errors.py  test_channels_api_not_implemented.py  test_external_integration_api.py  test_external_integration_api_branches.py  test_graph_and_repo_updates.py  test_graph_repository_edge_cases.py  test_inmemory_graph_repository.py  test_inmemory_graph_repository_more.py  test_model_manager.py  test_neo4j_graph_repository_fakes.py  test_servers_api.py  test_servers_api_errors.py  test_topic_extraction_service_unit.py  test_topic_service_additional.py  test_topic_service_utils.py  test_trending_and_related_edge_cases.py  test_trending_api.py
