[tool.poetry]
name = "concord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include = "concord", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
bertopic = "^0.16.4"
llvmlite = "0.43.0"
numba = "0.60"
neo4j = "5.19.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
nltk = "^3.9.1"
neomodel = "^5.3.3"

[tool.poetry.group.dev.dependencies]
python = ">=3.11"
pytest = "^8.3.3"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
httpx = "^0.27.2"
yapf = "^0.40.2"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.1"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
