[metadata]
name = concord.server
version = 1.0.0
description = API for Concord, an AI-powered semantic extraction and recommendation platform for networked communities.
long_description = file: README.md
keywords = OpenAPI Concord API
python_requires = >= 3.11.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,.venv,src/concord/

[style]
based_on_style = pep8
column_limit = 120
blank_lines_around_top_level_definition = 2
split_before_logical_operator = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
dedent_closing_brackets = true
spaces_around_default_or_named_assign = false
